# AgentStore

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deploy.yml  keepalive.yml
api/: CLAUDE.md  database.py  main.py  schemas.py  users.py
data/: CLAUDE.md  agentstore.db  capabilities.json
docs/: api.md  deploy.md
docs/plans/: 2026-02-18-agentstore-design.md  2026-02-18-agentstore-implementation.md  2026-02-18-security-scanner-design.md  2026-02-18-v1-agent-teams.md
scripts/: CLAUDE.md  ai_analyzer.py  auto_update.py  category_cleaner.py  clean_existing_data.py  collect.py  cron_setup.sh  deploy_api.sh  discover_extra.py  discover_mcp.py  discover_openclaw.py  embeddings.py  models.py  pipeline.py  scanner.py  score.py  seed_db.py  start.sh  update_data.sh  update_embeddings.py
tests/: test_ai_analyzer.py  test_api.py  test_discover_mcp.py  test_discover_openclaw.py  test_pipeline.py  test_score.py
web/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/data/: capabilities.json
web/public/: manifest.json
web/src/app/: HomeClient.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/src/components/: AuthModal.tsx  CapabilityCard.tsx  CapabilityDetailClient.tsx  ClientProviders.tsx  CommentSection.tsx  CompareButton.tsx  CopyCodeBlock.tsx  FavoriteButton.tsx  Footer.tsx  LanguageSwitch.tsx  MobileNav.tsx  Navbar.tsx  RadarChart.tsx  (+6 more)
(+26 files in other folders)
